syntax = "proto3";

package com.pojtinger.felicitas.liwasc;

import "google/protobuf/empty.proto";

option go_package = "github.com/pojntfx/liwasc/pkg/api";

service NodeWakeService {
  rpc StartNodeWake(NodeWakeStartMessage) returns (NodeWakeMessage);

  rpc SubscribeToNodeWakes(google.protobuf.Empty)
      returns (stream NodeWakeMessage);
}

message NodeWakeStartMessage {
  int64 NodeWakeTimeout = 1;
  string MACAddress = 2;
}

message NodeWakeMessage {
  int64 ID = 1;
  string CreatedAt = 2;
  bool Done = 3;
  int64 Priority = 4;
  string MACAddress = 5;
  bool PoweredOn = 6;
}
