syntax = "proto3";

package com.pojtinger.felix.liwasc;

import "google/protobuf/empty.proto";

option go_package = "github.com/pojntfx/liwasc/pkg/proto";

service MetadataService {
  rpc GetMetadata(google.protobuf.Empty) returns (MetadataMessage);
}

message MetadataMessage {
  repeated string Subnets = 1;
  string Device = 2;
}